--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -9,13 +9,13 @@
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "https://i.ibb.co/p6CWgYWd/Logo.png",
+      "src": "https://i.ibb.co/kVQxwznY/IMG-20251104-074641.jpg",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "https://i.ibb.co/p6CWgYWd/Logo.png",
+      "src": "https://i.ibb.co/kVQxwznY/IMG-20251104-074641.jpg",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
