--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -2,20 +2,23 @@
   "name": "Mijoro Boutique",
   "short_name": "Mijoro",
   "description": "Boutique de produits numériques malagasy",
+  "lang": "fr",
+  "dir": "ltr",
   "start_url": "./",
+  "scope": "./",
   "display": "standalone",
   "background_color": "#0f1216",
   "theme_color": "#1e88e5",
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "https://i.ibb.co/kVQxwznY/IMG-20251104-074641.jpg",
+      "src": "/icons/icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "https://i.ibb.co/kVQxwznY/IMG-20251104-074641.jpg",
+      "src": "/icons/icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
