--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Mijoro Boutique",
   "short_name": "Mijoro",
-  "description": "Boutique de produits numériques malagasy - eBooks, vidéos et applications",
+  "description": "Boutique de produits numériques malagasy",
   "lang": "fr",
   "dir": "ltr",
   "start_url": "/?source=pwa",
@@ -11,12 +11,6 @@
   "theme_color": "#1e88e5",
   "orientation": "portrait-primary",
   "icons": [
-    {
-      "src": "icons/icon-48.png",
-      "sizes": "48x48",
-      "type": "image/png",
-      "purpose": "any"
-    },
     {
       "src": "icons/icon-72.png",
       "sizes": "72x72",
@@ -71,37 +65,22 @@
       "src": "screenshots/home.png",
       "sizes": "540x720",
       "type": "image/png",
-      "form_factor": "narrow",
-      "label": "Accueil Mijoro Boutique"
+      "form_factor": "narrow"
     },
     {
       "src": "screenshots/shop.png",
       "sizes": "1280x720",
       "type": "image/png",
-      "form_factor": "wide",
-      "label": "Boutique de produits"
+      "form_factor": "wide"
     }
   ],
   "categories": ["shopping", "business"],
   "shortcuts": [
     {
-      "name": "Boutique",
+      "name": "Shop",
       "short_name": "Shop",
-      "description": "Voir nos produits numériques",
-      "url": "/?page=shop&source=shortcut",
-      "icons": [
-        {
-          "src": "icons/icon-192.png",
-          "sizes": "192x192",
-          "type": "image/png"
-        }
-      ]
-    },
-    {
-      "name": "Accueil",
-      "short_name": "Home",
-      "description": "Retour à l'accueil",
-      "url": "/?source=shortcut",
+      "description": "Voir nos produits",
+      "url": "/?page=shop",
       "icons": [
         {
           "src": "icons/icon-192.png",
@@ -111,6 +90,5 @@
       ]
     }
   ],
-  "prefer_related_applications": false,
-  "related_applications": []
+  "prefer_related_applications": false
 }
