--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -4,70 +4,52 @@
   "description": "Boutique de produits numériques malagasy - eBooks, vidéos, apps et jeux pour réussir en ligne",
   "lang": "fr",
   "dir": "ltr",
-  "start_url": "/?source=pwa",
-  "scope": "/",
-  "id": "/?source=pwa",
+  "start_url": "./?source=pwa",
+  "scope": "./",
+  "id": "./?source=pwa",
   "display": "standalone",
   "background_color": "#0f1216",
   "theme_color": "#1e88e5",
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "icons/icon-72.png",
+      "src": "./icons/android-launchericon-72-72.png",
       "sizes": "72x72",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "icons/icon-96.png",
+      "src": "./icons/android-launchericon-96-96.png",
       "sizes": "96x96",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "icons/icon-128.png",
-      "sizes": "128x128",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "icons/icon-144.png",
+      "src": "./icons/android-launchericon-144-144.png",
       "sizes": "144x144",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "icons/icon-152.png",
-      "sizes": "152x152",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "icons/icon-192.png",
+      "src": "./icons/android-launchericon-192-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "icons/icon-192-maskable.png",
+      "src": "./icons/maskable_icon_x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "icons/icon-384.png",
-      "sizes": "384x384",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "icons/icon-512.png",
+      "src": "./icons/android-launchericon-512-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "icons/icon-512-maskable.png",
+      "src": "./icons/maskable_icon_x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
@@ -75,21 +57,21 @@
   ],
   "screenshots": [
     {
-      "src": "screenshots/mobile-home.png",
+      "src": "./screenshots/mobile-home.png",
       "sizes": "540x960",
       "type": "image/png",
       "form_factor": "narrow",
       "label": "Écran d'accueil"
     },
     {
-      "src": "screenshots/mobile-shop.png",
+      "src": "./screenshots/mobile-shop.png",
       "sizes": "540x960",
       "type": "image/png",
       "form_factor": "narrow",
       "label": "Boutique"
     },
     {
-      "src": "screenshots/desktop-home.png",
+      "src": "./screenshots/desktop-home.png",
       "sizes": "1920x1080",
       "type": "image/png",
       "form_factor": "wide",
@@ -102,10 +84,10 @@
       "name": "Boutique",
       "short_name": "Shop",
       "description": "Voir tous les produits",
-      "url": "/?page=shop#shop",
+      "url": "./?page=shop#shop",
       "icons": [
         {
-          "src": "icons/icon-192.png",
+          "src": "./icons/android-launchericon-192-192.png",
           "sizes": "192x192",
           "type": "image/png"
         }
@@ -115,10 +97,10 @@
       "name": "Panier",
       "short_name": "Panier",
       "description": "Voir mon panier",
-      "url": "/?cart=open",
+      "url": "./?cart=open",
       "icons": [
         {
-          "src": "icons/icon-192.png",
+          "src": "./icons/android-launchericon-192-192.png",
           "sizes": "192x192",
           "type": "image/png"
         }
@@ -126,16 +108,5 @@
     }
   ],
   "prefer_related_applications": false,
-  "related_applications": [],
-  "iarc_rating_id": "",
-  "share_target": {
-    "action": "/share",
-    "method": "POST",
-    "enctype": "multipart/form-data",
-    "params": {
-      "title": "title",
-      "text": "text",
-      "url": "url"
-    }
-  }
+  "related_applications": []
 }
